# plate-notebook-desktop

./: CLAUDE.md  README.md  REFACTOR_PLAN.md  package.json  tailwind.config.ts  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs
src/actions/: features.ts  folders.ts  notes.ts  search.ts  tags.ts  wikilinks.ts
src/app/: App.tsx  providers.tsx
src/components/: ai-kit.tsx  analytics-view.tsx  autoformat-kit.tsx  backlinks-panel.tsx  basic-blocks-kit.tsx  basic-marks-kit.tsx  block-menu-kit.tsx  block-selection-kit.tsx  calendars.tsx  callout-kit.tsx  canvas-view.tsx  code-block-kit.tsx  column-kit.tsx  comment-kit.tsx  copilot-kit.tsx  create-note-button.tsx  cursor-overlay-kit.tsx  date-kit.tsx  discussion-kit.tsx  dnd-kit.tsx  docx-export-kit.tsx  docx-kit.tsx  editor-kit.tsx  emoji-kit.tsx  fixed-toolbar-kit.tsx  floating-toolbar-kit.tsx  font-kit.tsx  kanban-view.tsx  keyboard-shortcuts-dialog.tsx  line-height-kit.tsx  link-kit.tsx  list-base-kit.tsx  list-kit.tsx  math-kit.tsx  media-kit.tsx  mention-kit.tsx  mermaid-block.tsx  migration-banner.tsx  move-dialog.tsx  nav-favorites.tsx  (+28 more)
src/components/ui/: ai-chat-editor.tsx  ai-menu.tsx  ai-toolbar-button.tsx  alert-dialog.tsx  avatar.tsx  block-context-menu.tsx  block-discussion.tsx  block-list-static.tsx  block-list.tsx  caption.tsx  (+58 more)
src/db/: client.ts  schema.ts
src/hooks/: use-debounce.ts  use-is-touch-device.ts  use-upload-file.ts
src/lib/: extract.ts  store.ts  tauri.ts  templates.ts  tree.ts  uploadthing.ts
(+131 files in other folders)
