[package]
name = "plate-notebook-desktop"
version = "0.1.0"
description = "An Obsidian-like notebook app"
authors = ["you"]
edition = "2021"

[lib]
name = "plate_notebook_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.38", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
